--- a/siteInstitucional/cadastro/index.html
+++ b/siteInstitucional/cadastro/index.html
@@ -29,9 +29,9 @@
 
                     <input type="text" class="input-cad" placeholder="Email">
 
-                    <input type="text" class="input-cad" placeholder="Senha">
+                    <input type="password" class="input-cad" placeholder="Senha">
 
-                    <input type="text" class="input-cad" placeholder="Confirmar senha">
+                    <input type="password" class="input-cad" placeholder="Confirmar senha">
 
                     </div>  
 
