--- a/siteInstitucional/homepage/index.html
+++ b/siteInstitucional/homepage/index.html
@@ -91,5 +91,25 @@
         </div>
 
     </section>
+
+    <section class="banner">
+      <div class="container">
+        <div class="banner-cont" id="banner-reverse">
+          <div class="banner-title">
+            <aside class="banner-title-h1">
+              <h1>
+                Porque <br />
+                <span class="color-banner-title" id="color-banner-reverse">Jogos?</span> <br />
+              </h1>
+            </aside>
+          </div>
+
+          <div class="banner-figure-reverse">
+            <figure class="banner-figure-img"></figure>
+          </div>
+        </div>
+      </div>
+    </section>
+
   </body>
 </html>
