Homepage final (quase)

--- a/siteInstitucional/homepage/index.html
+++ b/siteInstitucional/homepage/index.html
@@ -125,9 +125,9 @@
           </div>
 
           <div class="iframe-youtube">
-            <iframe title="iframe-emocao" width="420" height="315"
+            <!-- <iframe title="iframe-emocao" width="420" height="315"
             src="https://www.youtube.com/embed/tgbNymZ7vqY">
-            </iframe>
+            </iframe> -->
           </div>
         </div>
 
@@ -145,19 +145,38 @@
             <h1>Conheça mais</h1>
           </div>
 
-          <div class="port-jogos">
+          <div class="grids">
 
-            <div class="port-card"></div>
-            <div class="port-card"></div>
-            <div class="port-card"></div>
-            <div class="port-card"></div>
-            <div class="port-card"></div>
+          <div class="port-jogos-grid1">
+
+            <div class="img-vertical">
+              <div class="port-card img-minecraft"></div>
+            </div>
+
+          </div>
+
+          <div class="port-jogos-grid2">
+
+            <div class="img-hori">
+              <div class="port-card img-valorant"></div>
+            </div>
+
+            <div class="img-hori-double">
+              <div class="port-card img-brawl"></div>
+              <div class="port-card img-pokemon"></div>
+            </div>
+
+            <div class="img-hori">
+              <div class="port-card img-rocket"></div>
+            </div>
 
           </div>
 
         </div>
 
-      </div>
+          </div>
+
+        </div>
 
     </section>
 
