--- a/siteInstitucional/homepage/index.html
+++ b/siteInstitucional/homepage/index.html
@@ -95,7 +95,7 @@
 
     </section>
 
-    <section class="banner">
+    <!-- <section class="banner">
       <div class="container">
         <div class="banner-cont" id="banner-reverse">
           <div class="banner-title">
@@ -112,7 +112,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <section class="emocao">
 
