Página de Jogo - Semi Pronta!

--- a/siteInstitucional/jogos/pokemon/index.html
+++ b/siteInstitucional/jogos/pokemon/index.html
@@ -37,8 +37,53 @@
         <div class="container">
             <div class="banner-cont">
 
+                <h1>POKÉMON</h1>
+
             </div>
         </div>
+    </section>
+
+    <section class="fotos">
+        <div class="container">
+
+            <div class="grid-fotos">
+
+                <div class="box"><img src="../../src/img/pokemon/2d.jpg"></div>
+                <div class="box"><img src="../../src/img/pokemon/firered.jpg"></div>
+                <div class="box"><img src="../../src/img/pokemon/gameboy.jpg"></div>
+                <div class="box"><img src="../../src/img/pokemon/kalos.webp"></div>
+                <div class="box"><img src="../../src/img/pokemon/legends.jpg"></div>
+                <div class="box"><img src="../../src/img/pokemon/letsgo.jpg"></div>
+                <div class="box"><img src="../../src/img/pokemon/mudkip.jpeg"></div>
+                <div class="box"><img src="../../src/img/pokemon/pikachu.jpg"></div>
+
+            </div>
+
+        </div>
+    </section>
+
+    <section class="infos">
+
+        <div class="container">
+
+            <div class="grid-infos">
+
+                <div class="parte-1">
+                    <div class="logon">
+                        <div class="logon-text"></div>
+                    </div>
+                </div>
+
+                <div class="parte-2">
+                    <div class="tema"></div>
+
+                    <div class="info-text"></div>
+                </div>
+
+            </div>
+
+        </div>
+
     </section>
 
 </body>
