--- a/siteInstitucional/public/indexHomepage.html
+++ b/siteInstitucional/public/indexHomepage.html
@@ -149,7 +149,7 @@
             </div>
 
             <div class="img-hori">
-              <a href="indexRocket.html"><div class="port-card" style="background-image: url(../src/img/rocketleague.jpg);"></div></a>
+              <a href="indexRocket.html"><div class="port-card" style="background-image: url(../src/img/home-rocket.png); background-position: center;"></div></a>
             </div>
 
           </div>
