--- a/siteInstitucional/public/indexPokemon.html
+++ b/siteInstitucional/public/indexPokemon.html
@@ -17,8 +17,8 @@
           <section class="itens-header">
             <nav class="nav-bar">
               <ul class="list-bar">
-                <li><a href="indexHomepage.html/#sobremim">Sobre mim</a></li>
-                <li><a href="indexHomepage.html/#jogos">Jogos</a></li>
+                <li><a href="indexHomepage.html#sobremim">Sobre mim</a></li>
+                <li><a href="indexHomepage.html#jogos">Jogos</a></li>
                 <li><a href="indexForum.html">Fórum</a></li>
               </ul>
             </nav>
@@ -32,7 +32,7 @@
       </div>
     </header>
 
-    <section class="banner">
+    <section class="banner" style="background-image: url(../src/img/pokemon-banner.png);">
       <div class="container">
         <div class="banner-cont">
           <h1>POKÉMON</h1>
