--- a/siteInstitucional/public/indexVava.html
+++ b/siteInstitucional/public/indexVava.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../src/css/styleJogos.css" />
     <script src="https://kit.fontawesome.com/bdbe817282.js" crossorigin="anonymous"></script>
-    <title>Pokémon</title>
+    <title>Valorant</title>
   </head>
 
   <body>
@@ -17,8 +17,8 @@
           <section class="itens-header">
             <nav class="nav-bar">
               <ul class="list-bar">
-                <li><a href="indexHomepage.html/#sobremim">Sobre mim</a></li>
-                <li><a href="indexHomepage.html/#jogos">Jogos</a></li>
+                <li><a href="indexHomepage.html#sobremim">Sobre mim</a></li>
+                <li><a href="indexHomepage.html#jogos">Jogos</a></li>
                 <li><a href="indexForum.html">Fórum</a></li>
               </ul>
             </nav>
@@ -32,10 +32,10 @@
       </div>
     </header>
 
-    <section class="banner">
+    <section class="banner" style="background-image: url(../src/img/vava-banner.jpg);">
       <div class="container">
         <div class="banner-cont">
-          <h1>POKÉMON</h1>
+          <h1>Valorant</h1>
         </div>
       </div>
     </section>
@@ -48,50 +48,50 @@
 
             <div
               class="item"
-              style="background-image: url(../src/img/pokemon-emulador.png)"
+              style="background-image: url(../src/img/vava-neon.png)"
             >
               <div class="content">
-                <div class="title">Jogos Emulador</div>
+                <div class="title">Neon</div>
+                <div class="desc">Lorem ipsum dolor sit amet</div>
+              </div>
+            </div>
+
+            <div
+              class="item"
+              style="background-image: url(../src/img/vava-lore.jpg)"
+            >
+              <div class="content">
+                <div class="title">História</div>
                 <div class="desc">Lorem ipsum dolor sit amet</div>
               </div>
             </div>
 
             <div
             class="item"
-            style="background-image: url(../src/img/pokemon-sprite.png)"
+            style="background-image: url(../src/img/vava-rank.png)"
           >
             <div class="content">
-              <div class="title">O Mundo Pokémon</div>
+              <div class="title">Ranqueada</div>
               <div class="desc">Lorem ipsum dolor sit amet</div>
             </div>
           </div>
 
             <div
               class="item"
-              style="background-image: url(../src/img/pokemon-mudkip.png)"
+              style="background-image: url(../src/img/vava-loud.webp)"
             >
               <div class="content">
-                <div class="title">Mudkip</div>
+                <div class="title">Loud</div>
                 <div class="desc">Lorem ipsum dolor sit amet</div>
               </div>
             </div>
 
             <div
               class="item"
-              style="background-image: url(../src/img/pokemon-anime.webp)"
+              style="background-image: url(../src/img/vava-moment.jpg)"
             >
               <div class="content">
-                <div class="title">O Anime</div>
-                <div class="desc">Lorem ipsum dolor sit amet</div>
-              </div>
-            </div>
-
-            <div
-              class="item"
-              style="background-image: url(../src/img/pokemon-legends.png)"
-            >
-              <div class="content">
-                <div class="title">Legends Arceus</div>
+                <div class="title">Momentos</div>
                 <div class="desc">Lorem ipsum dolor sit amet</div>
               </div>
             </div>
@@ -111,7 +111,7 @@
       <div class="container">
         <div class="grid-infos">
           <div class="box-img">
-            <div class="logon" style="background-image: url(../src/img/pokemon-squirtle.png);">
+            <div class="logon" style="background-image: url(../src/img/vava-logon.webp);">
               <div class="logon-text"></div>
             </div>
           </div>
