Fotos de Perfil e Pagina V1

--- a/public/index.html
+++ b/public/index.html
@@ -23,10 +23,18 @@
               </ul>
             </nav>
 
-            <section class="btn-bar">
+            <section class="btn-bar" style="display: none;">
               <a href="indexCadastro.html"><button class="btn-azul">Cadastrar</button></a>
               <a href="indexLogin.html"><button class="btn-rosa">Login</button></a>
             </section>
+
+            <a href="indexUser.html" class="user-a">
+              <section class="user-logon">
+                <div id="div_perfil" class="icon-perfil" style="background-image: url(perfil/100.png);"></div>
+                <p id="div_user">Joao</p>
+              </section>
+            </a>
+
           </section>
         </nav>
       </div>
