Pagina do Usuário

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
       <div class="container">
         <nav class="nav-header">
 
-          <a href="indexHomepage.html"><figure class="img-header"></figure></a>
+          <a href="index.html"><figure class="img-header"></figure></a>
 
           <section class="itens-header">
             <nav class="nav-bar">
