--- a/public/indexUser.html
+++ b/public/indexUser.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styleEditarPerfil.css">
-    <title>Editar Perfil</title>
+    <title>Meu Perfil</title>
 </head>
 <body>
 
@@ -12,9 +12,70 @@
 
         <section class="menu-lateral">
 
+            <div class="user">
+
+                <div class="img" style="background-image: url(perfil/100.png);"></div>
+                <h1>João</h1>
+
+            </div>
+
+            <hr>
+
+            <div class="lista">
+
+                <ul>
+                    <a href="index.html"><li>Página Inicial</li></a>
+                    <a href="indexForum.html"><li>Fórum</li></a>
+                    <a href=""><li>Sair</li></a>
+                </ul>
+
+            </div>
+
         </section>
 
         <section class="perfil">
+
+            <div class="escolha-foto">
+
+                <h1>Escolha sua foto de perfil</h1>
+
+                <div class="fotos">
+
+                    <div onclick="mudarFotoPerfil()" class="img" style="background-image: url(perfil/1.png);"></div>
+                    <div onclick="mudarFotoPerfil()" class="img" style="background-image: url(perfil/2.png);"></div>
+                    <div onclick="mudarFotoPerfil()" class="img" style="background-image: url(perfil/3.png);"></div>
+                    <div onclick="mudarFotoPerfil()" class="img" style="background-image: url(perfil/4.png);"></div>
+                    <div onclick="mudarFotoPerfil()" class="img" style="background-image: url(perfil/5.png);"></div>
+
+                    <div onclick="mudarFotoPerfil()" class="img" style="background-image: url(perfil/11.png);"></div>
+                    <div onclick="mudarFotoPerfil()" class="img" style="background-image: url(perfil/12.png);"></div>
+                    <div onclick="mudarFotoPerfil()" class="img" style="background-image: url(perfil/13.png);"></div>
+                    <div onclick="mudarFotoPerfil()" class="img" style="background-image: url(perfil/14.png);"></div>
+                    <div onclick="mudarFotoPerfil()" class="img" style="background-image: url(perfil/15.png);"></div>
+
+                    <div onclick="mudarFotoPerfil()" class="img" style="background-image: url(perfil/21.png);"></div>
+                    <div onclick="mudarFotoPerfil()" class="img" style="background-image: url(perfil/22.png);"></div>
+                    <div onclick="mudarFotoPerfil()" class="img" style="background-image: url(perfil/23.png);"></div>
+                    <div onclick="mudarFotoPerfil()" class="img" style="background-image: url(perfil/24.png);"></div>
+                    <div onclick="mudarFotoPerfil()" class="img" style="background-image: url(perfil/25.png);"></div>
+
+                    <div onclick="mudarFotoPerfil()" class="img" style="background-image: url(perfil/31.png);"></div>
+                    <div onclick="mudarFotoPerfil()" class="img" style="background-image: url(perfil/32.png);"></div>
+                    <div onclick="mudarFotoPerfil()" class="img" style="background-image: url(perfil/33.png);"></div>
+                    <div onclick="mudarFotoPerfil()" class="img" style="background-image: url(perfil/34.png);"></div>
+                    <div onclick="mudarFotoPerfil()" class="img" style="background-image: url(perfil/35.png);"></div>
+
+                    <div onclick="mudarFotoPerfil()" class="img" style="background-image: url(perfil/41.png);"></div>
+                    <div onclick="mudarFotoPerfil()" class="img" style="background-image: url(perfil/42.png);"></div>
+                    <div onclick="mudarFotoPerfil()" class="img" style="background-image: url(perfil/43.png);"></div>
+                    <div onclick="mudarFotoPerfil()" class="img" style="background-image: url(perfil/44.png);"></div>
+                    <div onclick="mudarFotoPerfil()" class="img" style="background-image: url(perfil/45.png);"></div>
+
+                </div>
+
+                <div class="info-grafico"></div>
+
+            </div>
             
         </section>
 
