Falta arrumar sessão usuário logado

--- a/public/indexForum.html
+++ b/public/indexForum.html
@@ -26,14 +26,17 @@
               </ul>
             </nav>
 
-            <section class="btn-bar">
-              <a href="indexCadastro.html"
-                ><button class="btn-azul">Cadastrar</button></a
-              >
-              <a href="indexLogin.html"
-                ><button class="btn-rosa">Login</button></a
-              >
+            <section class="btn-bar" id="btns_session">
+              <a href="indexCadastro.html"><button class="btn-azul">Cadastrar</button></a>
+              <a href="indexLogin.html"><button class="btn-rosa">Login</button></a>
             </section>
+
+            <a href="indexUser.html" class="user-a" id="user_session">
+              <section class="user-logon">
+                <div id="div_perfil" class="icon-perfil"></div>
+                <p id="div_user"></p>
+              </section>
+            </a>
           </section>
         </nav>
       </div>
