--- a/public/indexUser.html
+++ b/public/indexUser.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styleEditarPerfil.css">
     <title>Meu Perfil</title>
+    <script type="text/javascript" src="script/scriptUser.js"></script>
 </head>
 <body>
 
@@ -14,8 +15,8 @@
 
             <div class="user">
 
-                <div class="img" style="background-image: url(perfil/100.png);"></div>
-                <h1>João</h1>
+                <div class="img" id="img_user"></div>
+                <h1 id="nome_user"></h1>
 
             </div>
 
@@ -74,6 +75,14 @@
                 </div>
 
                 <div class="info-grafico"></div>
+
+            </div>
+
+            <div class="graficos">
+
+                <div class="grafico-1"></div>
+
+                <div class="grafico-2"></div>
 
             </div>
             
