--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/styleHomepage.css" />
+    <script type="text/javascript" src="script/scriptHomepage.js"></script>
     <title>GamesJ</title>
   </head>
 
@@ -23,15 +24,15 @@
               </ul>
             </nav>
 
-            <section class="btn-bar" style="display: none;">
+            <section class="btn-bar" id="btns_session">
               <a href="indexCadastro.html"><button class="btn-azul">Cadastrar</button></a>
               <a href="indexLogin.html"><button class="btn-rosa">Login</button></a>
             </section>
 
-            <a href="indexUser.html" class="user-a">
+            <a href="indexUser.html" class="user-a" id="user_session">
               <section class="user-logon">
-                <div id="div_perfil" class="icon-perfil" style="background-image: url(perfil/100.png);"></div>
-                <p id="div_user">Joao</p>
+                <div id="div_perfil" class="icon-perfil"></div>
+                <p id="div_user"></p>
               </section>
             </a>
 
