Foto de Perfil e Login funcionando

--- a/public/indexLogin.html
+++ b/public/indexLogin.html
@@ -17,9 +17,11 @@
         <figure class="icon"></figure>
 
         <menu class="login">
-            <input maxlength="50" type="text" class="input-log" placeholder="Email" id="email_input">
-            <input maxlength="25" type="password" class="input-log" placeholder="Senha" id="senha_input">
-            <button class="btn-log" onclick="entrar()"> Entrar </button>
+            <form id="event" class="formulario">
+                <input maxlength="50" type="text" class="input-log" placeholder="Email" id="email_input">
+                <input maxlength="25" type="password" class="input-log" placeholder="Senha" id="senha_input">
+                <button type="submit" class="btn-log" onclick="entrar()"> Entrar </button>
+            </form>
         </menu>
 
         </nav>
