--- a/public/indexForum.html
+++ b/public/indexForum.html
@@ -1,66 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fórum</title>
-    <link rel="stylesheet" href="css/styleForum.css" />
-    <script type="ja" src=""></script>
-    <script
-      src="https://kit.fontawesome.com/bdbe817282.js"
-      crossorigin="anonymous"
-    ></script>
-  </head>
-  <body onload="atualizarFeed()">
-    <header>
-      <div class="container">
-        <nav class="nav-header">
-          <a href="index.html"><figure class="img-header"></figure></a>
 
-          <section class="itens-header">
-            <nav class="nav-bar">
-              <ul class="list-bar">
-                <li><a href="index.html#sobremim">Sobre mim</a></li>
-                <li><a href="index.html#jogos">Jogos</a></li>
-                <li><a href="indexForum.html">Fórum</a></li>
-              </ul>
-            </nav>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Fórum</title>
+  <link rel="stylesheet" href="css/styleForum.css" />
+  <script type="ja" src=""></script>
+  <script src="https://kit.fontawesome.com/bdbe817282.js" crossorigin="anonymous"></script>
+</head>
 
-            <section class="btn-bar" id="btns_session">
-              <a href="indexCadastro.html"><button class="btn-azul">Cadastrar</button></a>
-              <a href="indexLogin.html"><button class="btn-rosa">Login</button></a>
-            </section>
+<body onload="tema(), atividade(), atualizarFeed()">
+  <header>
+    <div class="container">
+      <nav class="nav-header">
+        <a href="index.html">
+          <figure class="img-header"></figure>
+        </a>
 
-            <a href="indexUser.html" class="user-a" id="user_session">
-              <section class="user-logon">
-                <div id="div_perfil" class="icon-perfil"></div>
-                <p id="div_user"></p>
-              </section>
-            </a>
+        <section class="itens-header">
+          <nav class="nav-bar">
+            <ul class="list-bar">
+              <li><a href="index.html#sobremim">Sobre mim</a></li>
+              <li><a href="index.html#jogos">Jogos</a></li>
+              <li><a href="indexForum.html">Fórum</a></li>
+            </ul>
+          </nav>
+
+          <section class="btn-bar" id="btns_session">
+            <a href="indexCadastro.html"><button class="btn-azul">Cadastrar</button></a>
+            <a href="indexLogin.html"><button class="btn-rosa">Login</button></a>
           </section>
-        </nav>
-      </div>
-    </header>
 
-    <div class="linha">
-      <hr />
+          <a href="indexUser.html" class="user-a" id="user_session">
+            <section class="user-logon">
+              <div id="div_perfil" class="icon-perfil"></div>
+              <p id="div_user"></p>
+            </section>
+          </a>
+        </section>
+      </nav>
     </div>
+  </header>
 
-    <section class="forum">
-      <div class="container">
-        <div class="forum-content">
-          <div class="forum-left">
-            <div class="forum-info"></div>
+  <div class="linha">
+    <hr />
+  </div>
+
+  <section class="forum">
+    <div class="container">
+      <div class="forum-content">
+        <div class="forum-left">
+          <div class="forum-info">
+            <div class="user-mais-ativos">
+              <h2>Usuários mais ativos</h2>
+              <div class="align-user" id="user_atividade">
+              </div>
+            </div>
+
+            <div class="assunto-do-momento">
+
+              <h2>Assunto do momento</h2>
+              <div class="align-jogo" id="jogo_tema">
+                
+              </div>
+            </div>
           </div>
+        </div>
 
-          <div class="forum-right">
-            <div class="forum-publicar">
-              <h1>Participe!</h1>
+        <div class="forum-right">
+          <div class="forum-publicar">
+            <h1>Participe!</h1>
 
-              <div class="comentarios">
-                <div class="icon-user" id="icon_user"></div>
+            <div class="comentarios">
+              <div class="icon-user" id="icon_user"></div>
 
-                <form class="form-forum" id="form_postagem" method="post" onsubmit="return publicar()">
+              <form class="form-forum" id="form_postagem" method="post" onsubmit="return publicar()">
                 <div class="forum-publicacao">
                   <select name="select_tema" id="select_jogo">
                     <option selected disabled value="#">
@@ -73,7 +88,8 @@
                     <option value="5">Pokémon</option>
                   </select>
 
-                  <textarea maxlength="250" type="text" placeholder="Digite seu comentário aqui" id="text_postagem"></textarea>
+                  <textarea maxlength="250" type="text" placeholder="Digite seu comentário aqui"
+                    id="text_postagem"></textarea>
 
                   <div class="btn-publicar">
                     <div class="avaliacao" id="avaliacao_star">
@@ -85,18 +101,19 @@
                     </div>
                     <input type="hidden" id="ratingValue" name="ratingValue" value="">
                     <button type="submit" onclick="publicar()">Publicar</button>
-                  </form>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="forum-enviados" id="div_comentarios">
+              </form>
             </div>
           </div>
         </div>
       </div>
-    </section>
-  </body>
-  <script type="text/javascript" src="script/scriptForum.js"></script>
+
+      <div class="forum-enviados" id="div_comentarios">
+      </div>
+    </div>
+    </div>
+    </div>
+  </section>
+</body>
+<script type="text/javascript" src="script/scriptForum.js"></script>
+
 </html>
