Dashboard funcional 100% e Iframe

--- a/public/index.html
+++ b/public/index.html
@@ -112,13 +112,11 @@
         <div class="emocao-itens">
 
           <div class="emocao-title">
-            <h1>Jogo é emoção</h1>
+            <h1>Importância dos Jogos</h1>
           </div>
 
           <div class="iframe-youtube">
-            <!-- <iframe title="iframe-emocao" width="420" height="315"
-            src="https://www.youtube.com/embed/tgbNymZ7vqY">
-            </iframe> -->
+            <iframe width="940" height="480" src="https://www.youtube.com/embed/m-QICxBmyW0?si=O3EjJOZyUR9or4VM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
           </div>
         </div>
 
