Footer e Css Melhorado

--- a/public/indexForum.html
+++ b/public/indexForum.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Fórum</title>
   <link rel="stylesheet" href="css/styleForum.css" />
+  <link rel="icon" href="icon/brancoIcon.png" type="image/x-icon">
   <script type="ja" src=""></script>
   <script src="https://kit.fontawesome.com/bdbe817282.js" crossorigin="anonymous"></script>
 </head>
@@ -113,6 +114,7 @@
     </div>
     </div>
   </section>
+  
 </body>
 <script type="text/javascript" src="script/scriptForum.js"></script>
 
