--- a/public/indexRocket.html
+++ b/public/indexRocket.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/styleJogos.css" />
+    <link rel="icon" href="icon/brancoIcon.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/bdbe817282.js" crossorigin="anonymous"></script>
     <title>Rocket League</title>
   </head>
@@ -130,6 +131,31 @@
           </div>
         </div>
       </div>
+    </section>
+    <section class="footer">
+
+      <div class="container">
+
+        <div class="footer-content">
+
+          <h1>
+            GamesJ 
+          </h1>
+
+          <div class="contato">
+            <div class="contato-img" style="background-image: url(img/linked.png);"></div>
+            <div class="contato-img" style="background-image: url(img/what.png);"></div>
+            <div class="contato-img" style="background-image: url(img/github.png);"></div>
+          </div>
+
+          <h1>2024</h1>
+
+        </div>
+
+        <div class="footer-data"></div>
+
+      </div>
+
     </section>
   </body>
   <script type="text/javascript" src="script/scriptJogos.js"></script>
