--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/styleHomepage.css" />
-    <script type="text/javascript" src="script/scriptHomepage.js"></script>
+    <link rel="icon" href="icon/brancoIcon.png" type="image/x-icon">
     <title>GamesJ</title>
   </head>
 
@@ -169,5 +169,32 @@
 
     </section>
 
+    <section class="footer">
+
+      <div class="container">
+
+        <div class="footer-content">
+
+          <h1>
+            GamesJ 
+          </h1>
+
+          <div class="contato">
+            <div class="contato-img" style="background-image: url(img/linked.png);"></div>
+            <div class="contato-img" style="background-image: url(img/what.png);"></div>
+            <div class="contato-img" style="background-image: url(img/github.png);"></div>
+          </div>
+
+          <h1>2024</h1>
+
+        </div>
+
+        <div class="footer-data"></div>
+
+      </div>
+
+    </section>
+
   </body>
+  <script type="text/javascript" src="script/scriptHomepage.js"></script>
 </html>
