--- a/public/indexCadastro.html
+++ b/public/indexCadastro.html
@@ -1,57 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro</title>
     <link rel="stylesheet" href="css/styleCadastro.css">
-    <script type="text/javascript" src="script/scriptCadastro.js"></script>
+    <link rel="icon" href="icon/brancoIcon.png" type="image/x-icon">
 </head>
 
 <body>
 
-<section>
+    <section>
 
-    <div class="container">
+        <div class="container">
 
-        <div class="cadastro">
+            <div class="cadastro">
 
-            <div class="img-cad"></div>
+                <div class="img-cad"></div>
 
-            <div class="space-cad"> 
+                <div class="space-cad">
 
-                <form class="form-cad" id="event"> 
+                    <form class="form-cad" id="event">
 
-                    <h1> Cadastre-se Já! </h1>
+                        <h1> Cadastre-se Já! </h1>
 
-                    <div class="inputs">
+                        <div class="inputs">
 
-                    <input maxlength="25" type="text" id="input_user" class="input-cad" placeholder="Nome de Usuário">
+                            <input maxlength="25" type="text" id="input_user" class="input-cad"
+                                placeholder="Nome de Usuário">
 
-                    <input maxlength="50" type="text" id="input_email" class="input-cad" placeholder="Email">
+                            <input maxlength="50" type="text" id="input_email" class="input-cad" placeholder="Email">
 
-                    <input maxlength="25" type="password" id="input_senha" class="input-cad" placeholder="Senha">
+                            <input maxlength="25" type="password" id="input_senha" class="input-cad"
+                                placeholder="Senha">
 
-                    <input maxlength="25" type="password" id="input_confirmar_senha" class="input-cad" placeholder="Confirmar senha">
+                            <input maxlength="25" type="password" id="input_confirmar_senha" class="input-cad"
+                                placeholder="Confirmar senha">
 
-                    </div>  
+                        </div>
 
-                    <div class="btns">
+                        <div class="btns">
 
-                    <button class="btn-cad" type="submit" onclick="validarCadastro()"> Cadastrar </button>
+                            <button class="btn-cad" type="submit" onclick="validarCadastro()"> Cadastrar </button>
 
-                    </div>  
+                        </div>
 
-                </form>
+                    </form>
+
+                </div>
 
             </div>
 
         </div>
 
-    </div>
+    </section>
 
-</section>
-    
 </body>
-
+<script type="text/javascript" src="script/scriptCadastro.js"></script>
 </html>
