--- a/public/indexUser.html
+++ b/public/indexUser.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/styleEditarPerfil.css">
     <title>Meu Perfil</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <link rel="icon" href="icon/brancoIcon.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/bdbe817282.js" crossorigin="anonymous"></script>
 </head>
 
@@ -207,8 +208,6 @@
 
     </section>
 
-    <script type="text/javascript" src="script/scriptUser.js"></script>
-
 </body>
-
+<script type="text/javascript" src="script/scriptUser.js"></script>
 </html>
